--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Top 10 Restaurant</h1>
 <ul>
-  <%= @restaurants.each do |r| %>
+  <% @restaurants.each do |r| %>
 		<li>
 			<%= link_to "#{r.name}-#{r.phone}", restaurant_path(r) %>
 			
